--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 </ul>
             </div>
 
-            <img id="contact-image" src="D:\网站\photos\830cb514487c6fe0eda1573bf8e9158.jpg" alt="contact Image">
+            <img id="contact-image" src="photos/830cb514487c6fe0eda1573bf8e9158.jpg" alt="contact Image">
         
         </div>
 
