--- a/gallery.html
+++ b/gallery.html
@@ -36,75 +36,75 @@
 
         <div class="cont2_gal">
             <div class="pic_cont">
-                <div class="slide"><img src="D:\网站\photos\island\island (1).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (2).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (3).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (4).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (5).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (6).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (7).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (8).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (9).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (10).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (11).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (12).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (13).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\island\island (14).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (1).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (2).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (3).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (4).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (5).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (6).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (7).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (9).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (10).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (11).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (12).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (13).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (8).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\island\island (14).jpg" class = "pic"></div>
             </div>
             <div class="pic_cont">
-                <div class="slide"><img src="D:\网站\photos\beach\b (1).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (2).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (3).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (4).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (5).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (6).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (7).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (8).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (9).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (10).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (11).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (12).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (13).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (14).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\beach\b (15).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (1).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (2).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (3).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (4).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (5).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (6).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (7).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (8).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (9).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (10).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (11).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (12).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (13).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\beach\b (14).jpg" class = "pic">
+                <div class="slide"><img src="photos\beach\b (15).jpg" class = "pic"></div>
             </div>
             <div class="pic_cont">
-                <div class="slide"><img src="D:\网站\photos\firework\f (1).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (2).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (3).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (4).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (5).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (6).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (7).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (8).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (9).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (10).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (11).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (12).jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\firework\f (13).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (1).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (2).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (3).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (4).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (5).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (6).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (7).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (8).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (9).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (10).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (11).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (12).jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\firework\f (13).jpg" class = "pic"></div>
             </div>
             <div class="pic_cont">
-                <div class="slide"><img src="D:\网站\photos\p1.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p2.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p3.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p4.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p5.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p6.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p7.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p8.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p9.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p1.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p2.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p3.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p4.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p5.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p6.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p7.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p8.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p9.jpg" class = "pic"></div>
             </div>
             <div class="pic_cont">
-                <div class="slide"><img src="D:\网站\photos\p10.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p11.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p12.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p13.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p14.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p15.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p16.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p17.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p18.jpg" class = "pic"></div>
-                <div class="slide"><img src="D:\网站\photos\p19.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p10.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p11.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p12.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p13.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p14.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p15.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p16.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p17.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p18.jpg" class = "pic"></div>
+                <div class="slide"><img src="photos\p19.jpg" class = "pic"></div>
             </div>
             <div class="pic_cont"></div>
             <div class="pic_cont"></div>
