--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <div id="carousel">
               <ul> <!-- 图片容器 -->
                   <li>
-                      <div class="slide"><img src="D:\网站\photos\9d1d81decc480177a0fac96105f71df.png" ></div>
+                      <div class="slide"><img src="photos/9d1d81decc480177a0fac96105f71df.png" ></div>
                   </li>
                   <li>
-                      <div class="slide"><img src="D:\网站\photos\0559e6ee54faf9b8454ebe4c8445754.png"></div>
+                      <div class="slide"><img src="photos/0559e6ee54faf9b8454ebe4c8445754.png"></div>
                   </li>
                   <li>
-                      <div class="slide"><img src="D:\网站\photos\bc9df49d739a00149636ba92d002db6.png"></div>
+                      <div class="slide"><img src="photos/bc9df49d739a00149636ba92d002db6.png"></div>
                   </li>
               </ul>
             </div>
