--- a/project.html
+++ b/project.html
@@ -36,7 +36,7 @@
             <div class = "proj_div">
                 <div class = "icon">
                     <a href="https://github.com/hemonJuice/STATS790/tree/main/Project" target="_blank"><h2>Gradient Boosting Decision Tree for classification from scratch</h2>
-                    <img class="proj_img" src="D:\网站\proj_pic\GBDT.png" alt="Screenshot of GBDT"></a>
+                    <img class="proj_img" src="proj_pic/GBDT.png" alt="Screenshot of GBDT"></a>
                 </div>
                 <div class = "summary">
                     An implementation of Gradient Boosting Decision Tree (GBDT) for binary/multiclass classification from scratch. Include an improved base classifier 
@@ -47,7 +47,7 @@
             <div class = "proj_div">
                 <div class = "icon">
                     <a href="https://mcmasteru365.sharepoint.com/sites/sci-public-docs/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2Fsci%2Dpublic%2Ddocs%2FShared%20Documents%2FWebsite%20%2D%20Department%20Of%20Mathematics%20%26%20Statistics%2FUndergraduate%2FUndergraduate%5FResearch%5FProjects%2FSTATS%204T06%20Thesis%20%2D%20Hanwen%20Ju%2Epdf&parent=%2Fsites%2Fsci%2Dpublic%2Ddocs%2FShared%20Documents%2FWebsite%20%2D%20Department%20Of%20Mathematics%20%26%20Statistics%2FUndergraduate%2FUndergraduate%5FResearch%5FProjects&p=true&ga=1" target="_blank"><h2>Analyzing Clustering Algorithms for Mixed-Type Data (Thesis)</h2>
-                    <img class="proj_img" src="D:\网站\proj_pic\stats4t06.png" alt="Screenshot of GBDT"></a>
+                    <img class="proj_img" src="proj_pic/stats4t06.png" alt="Screenshot of GBDT"></a>
                 </div>
                 <div class = "summary">
                     Implemented and analyzed four clustering algorithms for mixed type data on six datasets, including KMCMD, SBAC, Frequency Neuron Mixed Self-Organizing Map, and AUTOCLASS.
@@ -58,7 +58,7 @@
             <div class = "proj_div">
                 <div class = "icon">
                     <a href="https://github.com/hemonJuice/COMAP2022C_Markov-LSTM" target="_blank"><h2>Trading Strategy Model for Gold and Bitcoin</h2>
-                    <img class="proj_img" src="D:\网站\proj_pic\tradingbit.png" alt="Screenshot of GBDT"></a>
+                    <img class="proj_img" src="proj_pic/tradingbit.png" alt="Screenshot of GBDT"></a>
                 </div>
                 <div class = "summary">
                     Developed a prediction model using Markov Chain and Recurrent Neural Network (RNN) to forecast gold and bitcoin prices. Implemented a robust trading
@@ -68,7 +68,7 @@
             <div class = "proj_div">
                 <div class = "icon">
                     <a href="index.html" target="_blank"><h2>Probabilistic Simulation Model for Wordle Game</h2>
-                    <img class="proj_img" src="D:\网站\proj_pic\wordle.png" alt="Screenshot of GBDT"></a>
+                    <img class="proj_img" src="proj_pic/wordle.png" alt="Screenshot of GBDT"></a>
                 </div>
                 <div class = "summary">
                     Designed and implemented a simulation model to predict the number of tries of the Wordle Game, incorporating dictionary partitioning strategies and human decision behavior. Applied 
@@ -79,7 +79,7 @@
             <div class = "proj_div">
                 <div class = "icon">
                     <a href="https://github.com/hemonJuice/Whales-Lethal-Risk-Model" target="_blank"><h2>Lethal Collision Probability Risk Model</h2>
-                    <img class="proj_img" src="D:\网站\proj_pic\whale.png" alt="Screenshot of GBDT"></a>
+                    <img class="proj_img" src="proj_pic/whale.png" alt="Screenshot of GBDT"></a>
                 </div>
                 <div class = "summary">
                     Developed a Lethal Collision Probability Risk Model based on average lethal probabilities within different regions. Processed spatial data and employed visualization techniques to identify high-risk areas 
@@ -89,7 +89,7 @@
             <div class = "proj_div">
                 <div class = "icon">
                     <a href="https://github.com/hemonJuice/MiniLanguage" target="_blank"><h2>A Mini Language (COMPSCI 3MI3 Final Project)</h2>
-                    <img class="proj_img" src="D:\网站\proj_pic\minilanguage.png" alt="Screenshot of GBDT"></a>
+                    <img class="proj_img" src="proj_pic/minilanguage.png" alt="Screenshot of GBDT"></a>
                 </div>
                 <div class = "summary">                 
                     Developed a mini programming language, incorporating essential features such as Booleans, Naturals, Simply Typed Pure λ-Calculus, Let Bindings, Sequencing Operator, and more. 
@@ -100,7 +100,7 @@
             <div class = "proj_div">
                 <div class = "icon">
                     <a href="https://github.com/hemonJuice/OpenGL_snakegame3D" target="_blank"><h2>3D Snake Game (COMPSCI 3GC3 Final Project)</h2>
-                    <img class="proj_img" src="D:\网站\proj_pic\terrin.png" alt="Screenshot of GBDT"></a>
+                    <img class="proj_img" src="proj_pic/terrin.png" alt="Screenshot of GBDT"></a>
                 </div>
                 <div class = "summary">                 
                     Developed a 3D snake game utilizing OpenGL. Implemented advanced features
