--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                   <li><a href="about.html">About</a></li>
                   <li><a href="gallery.html">Gallery </a></li>
                   <li><a href="project.html">Projects</a></li>
-                  <li><a href="lab.html">Lab</a></li>
+                  <!-- <li><a href="lab.html">Lab</a></li> -->
                   <li><a href="blog.html">Blogs</a></li>
-                  <li> <a href="D:\work\Resume3.13.pdf" target="_blank" >CV</a></li>
+                  <!-- <li> <a href="D:\work\Resume3.13.pdf" target="_blank" >CV</a></li> -->
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
