--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,9 @@
                     </li>
                     <!-- <li><a href="https://www.github.com" target="_blank"><i class="fa fa-github"></i></a></li>
                     <li><a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin"></i></a></li> -->
-        
+                    <li>&nbsp;</li>
+                    <li>&nbsp;</li>
+                    <li> You can also check out my friend <a href="https://barryf710.github.io/" style="text-decoration: underline;">Barry's page</a> </li>
                 </ul>
             </div>
 
