--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
                     </li>
 
                     <li>
-                        <span class="year">2015 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
-                        <span class="title">Comes to Toronto</span><br>
+                        <span class="year">2015 - 2018 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
+                        <span class="title">Father Michael McGivney Catholic Academy</span><br>
                     </li>
 
 
@@ -60,7 +60,7 @@
                     </li>
 
                     <li>
-                        <span class="year">2023 - Curr &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
+                        <span class="year">2023 - 2025 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
                         <span class="title">Master of Data Science and Artificial Intelligence (MDSAI)</span><br>
                         <span class="location">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
