--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hanwen Ju | Blog</title>
+    <title>Hanwen Ju | About</title>
     <link rel="stylesheet" type="text/css" href="blog_style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://use.typekit.net/qys7zuv.css">
