--- a/blog.html
+++ b/blog.html
@@ -34,23 +34,35 @@
 
         <div class="cont2_blog">
             <div class="content_blog_container">
-                <ul class = "bloglist">
-                    <li>
-                        <a href="hanwen.ju17@gmail.com">Amen</a><br>
-                        <p>Hanwen 2023</p>
-                    </li>
-                    <li>
-                        <a href="hanwen.ju17@gmail.com">if you cannot be the poet be the poem</a><br>
-                        <p>Hanwen 2023</p>
-                    </li>
-                    <li>
-                        <a href="hanwen.ju17@gmail.com">"Farewell"</a><br>
-                        <p>Hanwen 2023</p>
-                    </li>
-        
-                </ul>
+                <div class="blog-entries">
+                    <article class="blog-entry">
+                        <div class="blog-meta">
+                            <time class="blog-date">December 15, 2024</time>
+                        </div>
+                        <h3 class="blog-title">
+                            <a href="#">About this Blogs</a>
+                        </h3>
+                    </article>
+
+                    <article class="blog-entry">
+                        <div class="blog-meta">
+                            <time class="blog-date">December 10, 2024</time>
+                        </div>
+                        <h3 class="blog-title">
+                            <a href="#">if you cannot be the poet be the poem</a>
+                        </h3>
+                    </article>
+
+                    <!-- <article class="blog-entry">
+                        <div class="blog-meta">
+                            <time class="blog-date">December 5, 2024</time>
+                        </div>
+                        <h3 class="blog-title">
+                            <a href="#">Reinforcement Learning</a>
+                        </h3>
+                    </article> -->
+                </div>
             </div>
-        
         </div>
     </div>
 
