--- a/blog.html
+++ b/blog.html
@@ -36,22 +36,20 @@
             <div class="content_blog_container">
                 <div class="blog-entries">
                     <article class="blog-entry">
-                        <div class="blog-meta">
-                            <time class="blog-date">December 15, 2024</time>
-                        </div>
                         <h3 class="blog-title">
                             <a href="#">About this Blogs</a>
+                            <time class="blog-date">12/02/2025</time>
                         </h3>
                     </article>
 
-                    <article class="blog-entry">
+                    <!-- <article class="blog-entry">
                         <div class="blog-meta">
                             <time class="blog-date">December 10, 2024</time>
                         </div>
                         <h3 class="blog-title">
                             <a href="#">if you cannot be the poet be the poem</a>
                         </h3>
-                    </article>
+                    </article> -->
 
                     <!-- <article class="blog-entry">
                         <div class="blog-meta">
